feat: :sparkles: Refactor tool management to use new DTO structure, enhance validation, and update repository methods for improved functionality